# rss-forwarder

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: binary.yml  image.yml  package.yml  release.yml  test.yml
example/: README.md  rss-forwarder.service
src/: config.rs  error.rs  feed.rs  item.rs  main.rs  watcher.rs
src/feed/: item.rs  mod.rs
src/sink/: custom.rs  discord.rs  mod.rs  slack.rs
src/watcher/: builder.rs  mod.rs
