[package]
name = "rss-forwarder"
description = "Checks RSS feeds for new entries and forwards them."
version = "0.2.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2018"
keywords = ["rss", "atom", "cli", "forward", "webhook"]
categories = ["command-line-utilities"]
repository = "https://github.com/morphy2k/rss-forwarder"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "sync",
    "signal",
    "macros",
    "time",
    "process",
] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
rss = { version = "1", default-features = false }
atom_syndication = { version = "0.10", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
thiserror = "1"
humantime-serde = "1"
toml = "0.5"
pico-args = "0.4"
blake3 = "1"
html2text = "0.2"

[profile.release]
lto = true
opt-level = 3
debug = false
