[package]
name = "rss-forwarder"
description = "Checks RSS feeds for new entries and forwards them."
version = "0.6.0-alpha.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.63"
keywords = ["rss", "atom", "cli", "webhook", "stdio"]
categories = ["command-line-utilities"]
repository = "https://github.com/morphy2k/rss-forwarder"
readme = "README.md"
license = "MIT"
exclude = ["/example", "/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.5"
tokio = { version = "1.21", features = [
    "rt-multi-thread",
    "fs",
    "sync",
    "signal",
    "macros",
    "time",
    "process",
    "parking_lot",
] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
rss = { version = "2", default-features = false }
atom_syndication = { version = "0.11", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
humantime-serde = "1"
toml = "0.5"
pico-args = "0.5"
html2text = "0.4"
slack-bk = "0.1"

[profile.release]
lto = true
opt-level = 3
debug = false
strip = "debuginfo"
