[package]
name = "rss-forwarder"
description = "Checks RSS feeds for new entries and forwards them."
version = "0.7.1"
authors = ["Markus Wiegand <mail@morphy.dev>"]
edition = "2021"
rust-version = "1.70"
keywords = ["rss", "atom", "cli", "webhook", "stdio"]
categories = ["command-line-utilities"]
repository = "https://github.com/morphy2k/rss-forwarder"
readme = "README.md"
license = "MIT"
exclude = ["/example", "/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mimalloc", "rustls-tls", "trust-dns", "compression", "proxy"]

# HTTP client features
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
trust-dns = ["reqwest/trust-dns"]
compression = ["reqwest/deflate", "reqwest/brotli", "reqwest/gzip"]
proxy = ["reqwest/socks"]

[dependencies]
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "fs",
    "sync",
    "signal",
    "macros",
    "time",
    "process",
    "parking_lot",
] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
rss = { version = "2", default-features = false }
atom_syndication = { version = "0.12", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "tracing-log",
    "smallvec",
    "parking_lot",
    "env-filter",
    "ansi",
    "json",
], default-features = false }
thiserror = "1"
humantime-serde = "1"
toml = "0.8"
pico-args = "0.5"
html2text = "0.12"
slack-bk = "0.1"

# Optional dependencies
mimalloc = { version = "0.1", optional = true }

[profile.release]
lto = true
opt-level = 3
debug = false
strip = "debuginfo"
